[package]
name = "prost-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "prost_extension"
crate-type = ["cdylib"]

[dependencies]
prost-rs = { path = "..", features = ["catalogs"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0"
