[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "prost-python"
version = "0.1.0"
description = "Python bindings for prost-rs: probabilistic host galaxy association"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
